# qti

./: .clang-tidy  .clangd  .envrc  .gitignore  .gitmodules  CMakeLists.txt  Fetch.mjs  default.nix  do  flake.nix  gdb_debug.py  readme.md  shell.nix  tsconfig.json
app/_library/: CustomButton.qml  QtiWindow.qml  Text.qml  TextButton.qml  Theme.qml
app/app-launcher/: app-launcher.qml
app/file-browser/: file-browser.qml
app/git/: app.qml
app/itch/: BrowseTab.qml  CollectionsTab.qml  DownloadedTab.qml  Functions.mjs  GameDelegate.qml  InstalledTab.qml  OwnedTab.qml  Promise.mjs  app.qml  itch.qml
app/itch/icons/qti-dark/: index.theme
app/screenshot-editor/: app.qml  screenshot-editor.qml
app/screenshot-editor/icons/qti-dark/: index.theme
app/sql-viewer/: sql-viewer.qml
app/stdlib/: QtiWindow.qml  qmldir
app/text-editor/: text-editor.qml
app/wayland-compositor/: Chrome.qml  CompositorScreen.qml  Keyboard.qml  wayland-compositor.qml
nix-modules/: app-module.nix  module.nix  plugin-module.nix  qti-app-itch.nix  qti-app-screenshot-editor.nix  qti-app-stdlib.nix  qti-app-wayland-compositor.nix  qti-clipboard.nix  qti-core.nix  qti-plugin-application-database.nix  qti-plugin-clipboard.nix  qti-plugin-core.nix  qti-plugin-filesystem.nix  qti-plugin-process.nix  qti-plugin-screenshot.nix  qti-plugin-sql.nix  qti-plugin-stdlib.nix  qti-screenshot.nix
plugin/application-database/: CMakeLists.txt
plugin/application-database/src/: CMakeLists.txt  application_database.cpp  application_database.hpp
plugin/clipboard/: CMakeLists.txt
plugin/clipboard/src/: CMakeLists.txt  clipboard.cpp
plugin/clipboard/src/Qti/Clipboard/: CMakeLists.txt  clipboard.hpp
plugin/core/: CMakeLists.txt  do
plugin/core/src/: CMakeLists.txt  core.hpp  qti_core.cpp  qti_core.hpp
plugin/core/src/Qti/Core/: CMakeLists.txt  core.cpp  core.hpp
plugin/filesystem/: CMakeLists.txt
plugin/filesystem/src/: CMakeLists.txt  filesystem_entry.cpp  filesystem_entry.hpp  folder.cpp  folder.hpp
plugin/filesystem/src/Qti/Filesystem/: CMakeLists.txt  file.cpp  file.hpp  folder.cpp  folder.hpp
plugin/git/: CMakeLists.txt
plugin/process/: CMakeLists.txt  todo.md
plugin/process/src/: CMakeLists.txt  process.cpp  process.hpp
plugin/q-gui-application/: CMakeLists.txt
plugin/q-gui-application/src/: CMakeLists.txt  q_gui_application.cpp  q_gui_application.hpp
plugin/screenshot/: CMakeLists.txt
plugin/screenshot/src/: CMakeLists.txt  screenshot.cpp  screenshot.hpp  screenshot_image_provider.hpp  screenshot_wl_registry.cpp  screenshot_wl_registry.hpp  zwlr_screencopy_frame.cpp  zwlr_screencopy_manager.hpp
plugin/screenshot/src/Qti/Screenshot/: CMakeLists.txt  qimage_format_utils.hpp  screenshot.cpp  screenshot.hpp  screenshot_image_provider.cpp  screenshot_wl_registry.cpp  screenshot_wl_registry.hpp  shm_buffer.cpp  shm_buffer.hpp  zwlr_screencopy_frame.cpp  zwlr_screencopy_frame.hpp  zwlr_screencopy_manager.cpp  zwlr_screencopy_manager.hpp  zxdg_output.cpp  zxdg_output.hpp  zxdg_output_manager.cpp  zxdg_output_manager.hpp
plugin/sql/: CMakeLists.txt
plugin/sql/src/: CMakeLists.txt  sql_database.cpp  sql_database.hpp  sql_query_model.cpp  sql_query_model.hpp  sql_table.cpp  sql_table.hpp
plugin/stdlib/: CMakeLists.txt
plugin/stdlib/src/: CMakeLists.txt  CustomButton.qml  IconButton.qml  TextButton.qml
plugin/stdlib/src/Qti/Stdlib/: CMakeLists.txt  IconButton.qml
plugin/xdg-desktop-portal/: CMakeLists.txt
plugin/xdg-desktop-portal/src/: CMakeLists.txt  xdp_screenshot.cpp  xdp_screenshot.hpp
src/: main.cpp
